--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/styled-components": "^5.1.4",
     "axios": "^0.19.2",
     "expo": "~38.0.8",
+    "expo-image-picker": "~8.3.0",
     "expo-linear-gradient": "^8.3.1",
     "expo-notifications": "~0.3.3",
     "expo-secure-store": "~9.0.1",
