--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-elements": "^3.0.0-alpha.1",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
+    "react-native-maps": "0.27.1",
     "react-native-masked-text": "^1.13.0",
     "react-native-modal": "^11.5.6",
     "react-native-responsive-screen": "^1.4.1",
